# chances.github.io

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  404.html  Gemfile  LICENSE  Makefile  README.md  _config.build.yml  _config.yml  atom.xml  bower.json  chances-github-io.cabal  gulpfile.js  humans.txt  index.html  package-lock.json  package.json  package.json.bak  site.hs  sitemap.xml  stack.yaml
.github/workflows/: ci.yml
about/: index.html
assets/: party.webmanifest
assets/javascript/: all.min.35e8751b.js  party.elm.js  party.js  party.main.js  party.main.old.js  party.min.222950f0.js  party.min.4faf762a.js  party.min.5b15ed0f.js  party.min.6b707093.js  party.min.7cc93493.js  party.min.b107d965.js  party.min.d58b4320.js
assets/stylesheets/: birthday.css  birthday.min.css  party.css  party.min.css  style.min.4c98eab6.css  style.min.59ba3e66.css  style.min.c81a3375.css  style.min.css  style.min.d1c8219d.css  style.min.e6664df8.css  style.min.f8b51ae5.css
birthday/: index.html
blog/archive/: index.html
blog/my-new-blog/: index.html
blog/my-newer-blog/: index.html
haskell/: Projects.hs  site.hs
party/: index.html  old.html
projects/: index.html
site/: 404.html  CNAME  README.md  humans.txt  index.html
site/about/: index.html
site/assets/: party.webmanifest
site/assets/icons/: patreon.xcf
site/assets/stylesheets/: birthday.min.css  party.min.css
site/birthday/: index.html
site/blog/: index.html
site/blog/archive/: index.html
site/blog/my-new-blog/: index.html
site/blog/my-newer-blog/: index.html
site/party/: index.html  old.html
site/projects/: index.html
src/: 404.html  humans.txt  index.html
src/_data/: projects.yml
src/_drafts/: haskell.md
src/_includes/: head.html  sidebar.html
src/_layouts/: archive.html  default.html  page.html  post.html
src/_posts/: 2015-02-20-my-new-blog.md  2017-01-05-my-newer-blog.md
src/about/: index.html  index.md
src/assets/: .gitignore  party.webmanifest
src/assets/javascript/: party.main.js
src/assets/scss/: .gitignore  birthday.scss  content.scss  flow.scss  party.scss  style.scss
src/assets/stylesheets/: party.old.min.css
src/birthday/: index.html
src/projects/: index.html  index.md
src/templates/: post.md
templates/: post.md
themes/chances/: _config.yml
themes/chances/layout/: default.pug  (+3 more)
(+10 files in other folders)
