name:                chances-github-io
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/chances/chances-github-io#readme
license:             BSD3
license-file:        LICENSE
author:              Chance Snow
maintainer:          git@chancesnow.me
copyright:           Copyright 2017 Chance Snow
category:            App
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             site.hs
  hs-source-dirs:      haskell
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*
                     , aeson == 0.9.0.*
                     , bytestring == 0.10.6.*
                     , containers == 0.5.*
                     , filepath == 1.4.*
                     , hakyll == 4.7.*
                     , process == 1.2.*
                     , random-strings == 0.1.1.*
                     , split == 0.2.3.*
                     , time == 1.5.*
                     , yaml
